--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "remix-playground",
+  "name": "remix-documentation-orama",
   "private": true,
   "sideEffects": false,
   "type": "module",
@@ -24,6 +24,7 @@
     "follow-redirects": "^1.15.9",
     "front-matter": "^4.0.2",
     "gray-matter": "^4.0.3",
+    "gunzip-maybe": "^1.4.2",
     "isbot": "^4.1.0",
     "iso-639-1": "^3.1.3",
     "lru-cache": "^7.18.3",
@@ -40,7 +41,10 @@
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.0",
     "remix-utils": "^7.6.0",
+    "semver": "^7.5.0",
     "shiki": "^0.14.7",
+    "tar": "^6.2.0",
+    "tar-stream": "^3.1.7",
     "tiny-invariant": "^1.3.3",
     "unified": "^11.0.4",
     "unist-util-visit": "^5.0.0"
