--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "remix vite:build",
     "deploy": "flyctl deploy",
     "dev": "remix vite:dev",
+    "format": "prettier --write ./",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+    "lint:fix": "npm run lint -- --fix",
     "start": "remix-serve ./build/server/index.js",
     "typecheck": "tsc -b"
   },
