--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -87,15 +87,6 @@ jobs:
 
       - name: 🚀 Deploy Production
         if: ${{ github.ref == 'refs/heads/main' }}
-        run: flyctl deploy --remote-only --config ./fly.production.toml --build-arg COMMIT_SHA=${{ github.sha }}
+        run: flyctl deploy --remote-only --config ./fly.toml --build-arg COMMIT_SHA=${{ github.sha }}
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-
-  purge:
-    name: 🧹 Purge CDN
-    runs-on: ubuntu-latest
-    needs: [deploy]
-    steps:
-      - name: 🧹 Purge All
-        run: |
-          curl -D - -X POST --location "https://api.fastly.com/service/${{ secrets.FASTLY_SERVICE_ID }}/purge_all" -H "Accept: application/json" -H "Fastly-Key: ${{ secrets.FASTLY_API_TOKEN }}" -H "fastly-soft-purge: 1"
