--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "lint:fix": "npm run lint -- --fix",
     "start": "cross-env dotenv remix-serve ./build/server/index.js",
+    "test": "vitest",
     "typecheck": "tsc -b"
   },
   "dependencies": {
@@ -59,6 +60,7 @@
   "devDependencies": {
     "@remix-run/dev": "^2.12.0",
     "@remix-run/eslint-config": "^2.12.0",
+    "@testing-library/jest-dom": "^6.5.0",
     "@types/follow-redirects": "^1.14.4",
     "@types/gunzip-maybe": "^1.4.2",
     "@types/js-yaml": "^4.0.9",
@@ -69,6 +71,8 @@
     "@types/tar-stream": "^3.1.3",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
+    "@vitejs/plugin-react": "^4.3.1",
+    "@vitest/coverage-v8": "^2.1.1",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.38.0",
     "eslint-import-resolver-typescript": "^3.6.1",
@@ -76,13 +80,15 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "happy-dom": "^15.7.4",
     "postcss": "^8.4.38",
     "remix-development-tools": "^4.5.1",
     "remix-flat-routes": "^0.6.5",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.1.6",
     "vite": "^5.1.0",
-    "vite-tsconfig-paths": "^4.2.1"
+    "vite-tsconfig-paths": "^4.2.1",
+    "vitest": "^2.1.1"
   },
   "engines": {
     "node": ">=20.0.0"
