--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "format": "prettier --write ./",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "lint:fix": "npm run lint -- --fix",
-    "start": "cross-env dotenv remix-serve ./build/server/index.js",
+    "preview": "cross-env dotenv remix-serve ./build/server/index.js",
+    "start": "remix-serve ./build/server/index.js",
     "test": "vitest",
     "typecheck": "tsc -b"
   },
